[package]
name = "daedalus"
description = "Maze / dungeon generator"
repository = "https://github.com/isidornygren/daedalus"
version = "0.1.0"
authors = ["Isidor Nygren <karlisidornygren@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
name = "daedalus"
path = "src/lib.rs"

[dependencies]
rand = "0.6.5"
bmp = "*"